[project]
name = "input-tracker"
version = "0.1.0"
description = "Desktop tool for mouse pixel position display and keyboard/mouse action recording"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "pynput>=1.7.7",
]

[project.scripts]
input-tracker = "input_tracker:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
